[gd_scene load_steps=5 format=3 uid="uid://bosycfbnvhctk"]

[ext_resource type="Script" path="res://scripts/CharacterSelectScene.gd" id="1_i1ou6"]
[ext_resource type="Texture2D" uid="uid://ccaiomohb8vwq" path="res://images/char_miko_icon.png" id="2_4guqi"]
[ext_resource type="Texture2D" uid="uid://cca3ij33cewkj" path="res://images/char_lui_icon.png" id="3_247c2"]
[ext_resource type="Texture2D" uid="uid://dgiq852uh62wd" path="res://images/char_suisei_icon.png" id="4_1dkt8"]

[node name="CharacterSelectScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i1ou6")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label_Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_right = 69.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "誰でプレイしますか"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.268519
anchor_right = 0.260417
anchor_bottom = 0.731481
offset_left = 100.0
offset_top = 126.0
offset_right = 200.0
offset_bottom = 26.0
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Label_Name" type="Label" parent="InfoPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "名前"

[node name="Label_Desc" type="Label" parent="InfoPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "説明"

[node name="HBox_Stats" type="HBoxContainer" parent="InfoPanel"]
layout_mode = 2
mouse_filter = 2

[node name="Label_HP" type="Label" parent="InfoPanel/HBox_Stats"]
layout_mode = 2
text = "HP: 60"

[node name="Label_Gold" type="Label" parent="InfoPanel/HBox_Stats"]
layout_mode = 2
text = "GOLD: 100"

[node name="TalentContainer" type="HBoxContainer" parent="InfoPanel"]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect_TalentIcon" type="TextureRect" parent="InfoPanel/TalentContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 2

[node name="VBox_TalentTexts" type="VBoxContainer" parent="InfoPanel/TalentContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label_TalentName" type="Label" parent="InfoPanel/TalentContainer/VBox_TalentTexts"]
layout_mode = 2
text = "ホロビーム"

[node name="Label_TalentDesc" type="Label" parent="InfoPanel/TalentContainer/VBox_TalentTexts"]
layout_mode = 2
text = "敵全体に6ダメージ"

[node name="BottomArea" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(300, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -154.0
offset_top = -100.0
offset_right = 154.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxButtons" type="HBoxContainer" parent="BottomArea"]
layout_mode = 2

[node name="Btn_Character1" type="TextureButton" parent="BottomArea/HBoxButtons"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_247c2")

[node name="Btn_Character2" type="TextureButton" parent="BottomArea/HBoxButtons"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("2_4guqi")

[node name="Btn_Character3" type="TextureButton" parent="BottomArea/HBoxButtons"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("4_1dkt8")

[node name="Button_Confirm" type="Button" parent="."]
custom_minimum_size = Vector2(150, 60)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -151.0
offset_top = -60.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "ゲームスタート"

[node name="Button_Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -39.0
offset_right = 47.0
grow_vertical = 0
theme_override_font_sizes/font_size = 22
text = "戻る"
