# CharacterSelectScene.gd
extends Control

const CHAR_CSV: String = "res://data/characters.csv"

# ==== èƒŒæ™¯ ====
@onready var background: TextureRect = $Background

# ==== ä¸‹éƒ¨ã®ã‚­ãƒ£ãƒ©é¸æŠžãƒœã‚¿ãƒ³ ====
@onready var character_buttons: Array[TextureButton] = [
	$BottomArea/HBoxButtons/Btn_Character1,
	$BottomArea/HBoxButtons/Btn_Character2,
	$BottomArea/HBoxButtons/Btn_Character3,
]

# ==== ã‚­ãƒ£ãƒ©è©³ç´°è¡¨ç¤º ====
@onready var label_name      : Label       = $InfoPanel/Label_Name
@onready var label_desc      : Label       = $InfoPanel/Label_Desc
@onready var label_hp        : Label       = $InfoPanel/HBox_Stats/Label_HP
@onready var label_gold      : Label       = $InfoPanel/HBox_Stats/Label_Gold
@onready var label_talent    : Label       = $InfoPanel/TalentContainer/VBox_TalentTexts/Label_TalentName
@onready var label_talentdesc: Label       = $InfoPanel/TalentContainer/VBox_TalentTexts/Label_TalentDesc
@onready var tex_talent_icon : TextureRect = $InfoPanel/TalentContainer/TextureRect_TalentIcon

# ==== æ±ºå®šãƒ»æˆ»ã‚‹ãƒœã‚¿ãƒ³ ====
@onready var button_confirm: Button = $Button_Confirm
@onready var button_back   : Button = $Button_Back

# ==== çŠ¶æ…‹ ====
var selected_index: int = -1
var characters: Array[CharacterData] = []


func _ready() -> void:
	# ãƒ•ã‚§ãƒ¼ãƒ‰ã‚¤ãƒ³
	FadeLayer.fade_in()

	# ã‚­ãƒ£ãƒ©ä¸€è¦§ãƒ­ãƒ¼ãƒ‰
	characters = CharacterLoader.load_characters(CHAR_CSV)
	if characters.is_empty():
		push_error("[CharacterSelect] ã‚­ãƒ£ãƒ©CSVãŒç©º or èª­ã¿è¾¼ã¿å¤±æ•—")
		return

	# ãƒœã‚¿ãƒ³ã‚»ãƒƒãƒˆã‚¢ãƒƒãƒ—
	_setup_buttons()

	# æœ€åˆã¯æ±ºå®šãƒœã‚¿ãƒ³ç„¡åŠ¹
	button_confirm.disabled = true

	button_confirm.pressed.connect(_on_confirm_pressed)
	button_back.pressed.connect(_on_back_pressed)


# ä¸‹éƒ¨ã®ã‚­ãƒ£ãƒ©ãƒœã‚¿ãƒ³ã«ã‚¢ã‚¤ã‚³ãƒ³ã‚’è¨­å®š & ã‚·ã‚°ãƒŠãƒ«æŽ¥ç¶š
func _setup_buttons() -> void:
	var count: int = min(character_buttons.size(), characters.size())

	for i in range(count):
		var btn: TextureButton = character_buttons[i]
		var info: CharacterData = characters[i]

		# ãƒœã‚¿ãƒ³ç”¨ã®ç”»åƒï¼ˆicon_path ãŒã‚ã‚Œã°å„ªå…ˆã€ãªã‘ã‚Œã° image_pathï¼‰
		var tex_path: String = ""
		if info.talent_icon_path != "":  # ã“ã“ã‚’ icon_path ã«ã—ãŸã‘ã‚Œã° CSVï¼†CharacterData å´ã‚‚è¿½åŠ 
			tex_path = info.talent_icon_path
		else:
			tex_path = info.image_path

		if tex_path != "" and ResourceLoader.exists(tex_path):
			btn.texture_normal = load(tex_path)
		else:
			push_warning("[CharacterSelect] ãƒœã‚¿ãƒ³ç”»åƒãŒè¦‹ã¤ã‹ã‚Šã¾ã›ã‚“: %s" % tex_path)

		# ãƒœã‚¿ãƒ³æŠ¼ä¸‹æ™‚ã®ã‚³ãƒ¼ãƒ«ãƒãƒƒã‚¯
		btn.pressed.connect(_on_character_selected.bind(i))


# ã‚­ãƒ£ãƒ©é¸æŠžæ™‚
func _on_character_selected(index: int) -> void:
	if index < 0 or index >= characters.size():
		return

	selected_index = index
	var info: CharacterData = characters[index]

	# === æƒ…å ±ãƒ‘ãƒãƒ«æ›´æ–° ===
	label_name.text       = info.name
	label_desc.text       = info.description
	label_hp.text         = "HP: %d" % info.hp
	label_gold.text       = "GOLD: %d" % info.gold
	label_talent.text     = info.talent_name
	label_talentdesc.text = info.talent_desc

	# ã‚¿ãƒ¬ãƒ³ãƒˆã‚¢ã‚¤ã‚³ãƒ³
	var icon_path: String = info.talent_icon_path
	if icon_path != "" and ResourceLoader.exists(icon_path):
		tex_talent_icon.texture = load(icon_path)
	else:
		tex_talent_icon.texture = null

	# èƒŒæ™¯ã‚¤ãƒ©ã‚¹ãƒˆåˆ‡ã‚Šæ›¿ãˆï¼ˆimage_path ã‚’èƒŒæ™¯ã¨ã—ã¦ä½¿ç”¨ï¼‰
	var bg_path: String = info.image_path
	if bg_path != "" and ResourceLoader.exists(bg_path):
		background.texture = load(bg_path)
	else:
		push_warning("[CharacterSelect] èƒŒæ™¯ç”»åƒãŒè¦‹ã¤ã‹ã‚Šã¾ã›ã‚“: %s" % bg_path)

	# === ãƒœã‚¿ãƒ³ã®ãƒã‚¤ãƒ©ã‚¤ãƒˆ ===
	for i in range(character_buttons.size()):
		character_buttons[i].modulate = Color(1, 1, 1, 1)
	character_buttons[index].modulate = Color(1, 1, 1, 1).lerp(Color(1, 1, 0.5, 1), 0.5)

	# æ±ºå®šãƒœã‚¿ãƒ³ã‚’æœ‰åŠ¹åŒ–
	button_confirm.disabled = false


# æ±ºå®š â†’ é¸ã‚“ã ã‚­ãƒ£ãƒ©ã§ã‚²ãƒ¼ãƒ é–‹å§‹
func _on_confirm_pressed() -> void:
	if selected_index < 0 or selected_index >= characters.size():
		push_warning("ã‚­ãƒ£ãƒ©ã‚’é¸ã‚“ã§ãã ã•ã„")
		return

	var selected: CharacterData = characters[selected_index]
	Global.selected_character = selected
	Global.player_hp = selected.hp
	Global.player_max_hp = selected.hp
	Global.player_gold = selected.gold
	Global.player_atk_bonus = 0

	# åˆæœŸãƒ‡ãƒƒã‚­èª­ã¿è¾¼ã¿
	Global.player_deck = DeckLoader.load_starting_deck(selected.id)
	print("ðŸƒ åˆæœŸãƒ‡ãƒƒã‚­:", Global.player_deck.map(func(c): return c.name))

	# åˆæœŸã‚°ãƒƒã‚ºä»˜ä¸Ž
	Global.player_goods.clear()
	Global.player_potions.clear()
	if selected.starting_goods_id != "":
		var goods = CardLoader.get_goods_by_id(selected.starting_goods_id)
		if goods:
			Global.player_goods.append(goods)
			print("ðŸŽ åˆæœŸã‚°ãƒƒã‚º:", goods.name)

	# ãƒ•ã‚§ãƒ¼ãƒ‰ä»˜ãã§ãƒžãƒƒãƒ—ã¸
	await FadeLayer.change_scene_with_fade("res://scenes/MapScene.tscn")


func _on_back_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/TitleScene.tscn")
